--- a/package.json
+++ b/package.json
@@ -3,29 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ethersproject/address": "^5.6.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.29",
-    "@types/react": "^18.0.7",
-    "@types/react-dom": "^18.0.0",
-    "i18next": "^21.6.16",
-    "i18next-browser-languagedetector": "^6.1.4",
-    "i18next-xhr-backend": "^3.2.2",
-    "joi": "^17.6.0",
-    "react": "^18.0.0",
-    "react-device-detect": "^2.2.2",
-    "react-dom": "^18.0.0",
-    "react-hook-form": "^7.30.0",
-    "react-i18next": "^11.16.7",
-    "react-redux": "^8.0.1",
-    "react-scripts": "5.0.1",
-    "rebass": "^4.0.7",
-    "styled-components": "^5.3.5",
-    "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
+    "joi": "^17.6.0"
   },
   "scripts": {
     "start": "GENERATE_SOURCEMAP=false react-app-rewired start",
@@ -34,7 +12,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint \"./src/**/*.{ts,tsx,js}\"",
     "ipfs:build": "cross-env PUBLIC_URL=\".\" yarn build",
-    "ipfs:publish": "ipfs-deploy build -p infura -O"
+    "ipfs:publish": "ipfs-deploy build -p infura -O",
+    "bundle": "rollup -c"
   },
   "eslintConfig": {
     "extends": [
@@ -58,7 +37,13 @@
     "yarn": "use npm!"
   },
   "devDependencies": {
-    "@types/rebass": "^4.0.10",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.2",
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
     "@types/styled-components": "^5.1.25",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
@@ -66,12 +51,35 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "https-browserify": "^1.0.0",
+    "i18next": "^21.6.16",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-xhr-backend": "^3.2.2",
     "os-browserify": "^0.3.0",
     "prettier": "^2.6.2",
     "process": "^0.11.10",
+    "react": "^18.1.0",
     "react-app-rewired": "^2.2.1",
+    "react-device-detect": "^2.2.2",
+    "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.7",
+    "react-scripts": "5.0.1",
+    "rollup": "^2.74.1",
+    "rollup-plugin-dts": "^4.2.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "typescript": "^4.6.4",
     "url": "^0.11.0"
-  }
+  },
+  "peerDependencies": {
+    "react": "^18.1.0",
+    "styled-components": "^5.3.5"
+  },
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "dist/index.d.ts"
 }
