--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nimi-card-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "joi": "^17.6.0"
   },
