--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,3 +32,5 @@ jobs:
         run: npm run test
       - name: Build
         run: npm run build
+      - name: Bundle
+        run: npm run bundle
