--- a/package.json
+++ b/package.json
@@ -86,5 +86,8 @@
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "resolutions": {
+    "type-fest": "^0.21.3"
+  }
 }
