--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "files": [
-    "dist"
+    "dist",
+    "build"
   ],
   "types": "dist/index.d.ts",
   "resolutions": {
