--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.5.0-beta.3",
   "private": false,
   "dependencies": {
+    "@ethersproject/address": "^5.6.1",
     "cross-env": "^7.0.3",
     "nanoid": "^4.0.0",
     "yup": "^0.32.11"
