--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cross-env": "^7.0.3",
     "nanoid": "^4.0.0",
     "react-qrcode-logo": "^2.7.0",
+    "validator": "^13.7.0",
     "yup": "^0.32.11"
   },
   "scripts": {
@@ -50,6 +51,7 @@
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.2",
     "@svgr/rollup": "^6.2.1",
+    "@types/jest": "^28.1.6",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
